# lemma-overloading

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Make  Makefile  Makefile.coq.local  README  README.md  _CoqProject  auto.v  cancel.v  cancel2.v  cancelCTC.v  cancelD.v  coq-lemma-overloading.opam  default.nix  description  domains.v  dune-project  finmap.v  heaps.v  hprop.v  indom.v  indomCTC.v  llistR.v  mathcomp.nix  meta.yml  noalias.v  noaliasBT.v  noaliasCTC.v  opam  ordtype.v  perms.v  prefix.v  prelude.v  rels.v  ssreflect.nix  stlog.v  stlogCTC.v  (+6 more)
.github/workflows/: coq-action.yml  docker-action.yml  nix-action.yml
.nix/: coq-nix-toolbox.nix  fallback-config.nix
docs/: LemmaOverloading.auto.html  LemmaOverloading.cancel.html  LemmaOverloading.cancel2.html  LemmaOverloading.cancelCTC.html  LemmaOverloading.cancelD.html  LemmaOverloading.domains.html  LemmaOverloading.finmap.html  LemmaOverloading.heaps.html  LemmaOverloading.hprop.html  LemmaOverloading.indom.html  LemmaOverloading.indomCTC.html  LemmaOverloading.llistR.html  LemmaOverloading.noalias.html  LemmaOverloading.noaliasBT.html  LemmaOverloading.noaliasCTC.html  LemmaOverloading.ordtype.html  LemmaOverloading.perms.html  LemmaOverloading.prefix.html  LemmaOverloading.prelude.html  LemmaOverloading.rels.html  LemmaOverloading.stlog.html  LemmaOverloading.stlogCTC.html  LemmaOverloading.stlogR.html  LemmaOverloading.stmod.html  LemmaOverloading.stsep.html  LemmaOverloading.terms.html  LemmaOverloading.xfind.html  LemmaOverloading.xfindCTC.html  coqdocjs.css  index.html  indexpage.html  toc.html
docs/v8.11.0/: LemmaOverloading.auto.html  LemmaOverloading.cancel2.html  LemmaOverloading.cancelCTC.html  LemmaOverloading.cancelD.html  LemmaOverloading.heaps.html  LemmaOverloading.hprop.html  LemmaOverloading.indomCTC.html  LemmaOverloading.noaliasBT.html  LemmaOverloading.noaliasCTC.html  (+11 more)
resources/: config.js  header.html  index.html  index.md
theories/: auto.v  cancel.v  cancel2.v  cancelCTC.v  cancelD.v  domains.v  dune  finmap.v  heaps.v  hprop.v  indom.v  indomCTC.v  llistR.v  noalias.v  noaliasBT.v  noaliasCTC.v  ordtype.v  perms.v  prefix.v  prelude.v  rels.v  stlog.v  stlogCTC.v  stlogR.v  stmod.v  stsep.v  terms.v  xfind.v  xfindCTC.v
(+38 files in other folders)
