opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/lemma-overloading"
dev-repo: "git+https://github.com/coq-community/lemma-overloading.git"
bug-reports: "https://github.com/coq-community/lemma-overloading/issues"
doc: "https://coq-community.github.io/lemma-overloading/"
license: "GPL-3.0-or-later"

synopsis: "Libraries demonstrating design patterns for programming and proving with canonical structures in Coq"
description: """
This project contains Hoare Type Theory libraries which
demonstrate a series of design patterns for programming
with canonical structures that enable one to carefully
and predictably coax Coq's type inference engine into triggering
the execution of user-supplied algorithms during unification, and
illustrates these patterns through several realistic examples drawn
from Hoare Type Theory. The project also contains typeclass-based
re-implementations for comparison."""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.12~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.7" & < "1.11~") | (= "dev")}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:canonical structures"
  "keyword:proof automation"
  "keyword:hoare type theory"
  "keyword:lemma overloading"
  "logpath:LemmaOverloading"
]
authors: [
  "Georges Gonthier"
  "Beta Ziliani"
  "Aleksandar Nanevski"
  "Derek Dreyer"
]
