(coq.theory
 (name LemmaOverloading)
 (package coq-lemma-overloading)
 (synopsis "Libraries demonstrating design patterns for programming and proving with canonical structures in Coq")
 (flags
   -w -notation-overridden
   -w -projection-no-head-constant
   -w -redundant-canonical-projection
   -w -notation-incompatible-format))
